# InfiniteLoop

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  FILE_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  TEAM_ROLES.md  TODO.md  TOP_AI_SDKS_2026.md  claude.md  lefthook.yml  mission_log.txt  pyproject.toml  vitest.workspace.ts
.agents/: agents.md  core_rules.md  review_agent.py
core/: .coverage  PROPOSAL.md  config.py  main.py  pyproject.toml
core/archive/: orchestrator_brain.py  thinking.py
core/modules/: adk_agent.py  architect.py  auto_adaptation.py  base_tools.py  beads_tracker.py  brain.py  claude_agent.py  coder.py  context.py  dashboard_router.py  evolution.py  multi_ai.py  sandbox.py  skill_tree.py  soul.md  tool_registry.py
core/schemas/: dashboard.py  llm.py
core/services/: context_manager.py  llm_bridge.py  loop_orchestrator.py  stream_parser.py  tool_engine.py
core/tests/: test_architect.py  test_brain.py  test_claude_agent.py  test_coder.py  test_context_engine.py  test_evolution.py  test_llm_bridge.py  test_orchestrator_mission_review.py  test_sandbox.py  test_system_validation.py  test_thinking.py
core/tests/archive/: test_orchestrator_mission_review.py
core/workspace/: cli_test_success.txt  mission_review_final.txt  read_test.txt  test_mission_review.txt
core/workspace/.agents/: instructions.json
core/workspace/.agents/tools/api/: schema_test.json
core/workspace/.agents/tools/backend/: backend_tool.py  brain_evolution_tool.py  evolution_test.py  hotload_test.py  robust_test_1.py  robust_test_2.py  test_tool.py  tool1.py
(+125 files in other folders)
